--- a/os.html
+++ b/os.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
 	<meta property="og:site_name" content="Wylie">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="WGDPS website">
+	<meta property="og:title" content="TG20 Website Beta">
 	<meta property="og:description" content="Welcome to the new styled website for WylieGDPS">
 	<meta id="meta-image" property="og:image" itemprop="image" content="https://media.discordapp.net/attachments/839834610799607818/871744697926823936/white-blueshadow.png">
 	<meta name="author" content="Wylie">
