--- a/os.html
+++ b/os.html
@@ -10,7 +10,7 @@
   	<meta name="description" content="WGDPS website">
 
 	<link rel="icon" href="assets/new-logo/white-blueshadow.png">
-	<title>WGDPS website</title>
+	<title>TG20 Website Beta</title>
 
 	<meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -237,7 +237,7 @@
 				<img src="assets/di/download.png"><br>
 				Download
 			</a>
-			<a href="https://bing.com" onclick="alert('NOTE: You will have to rotate your device to navigate, as GD Browser is not compatible with mobile devices.')">
+			<a href="https://bing.com" onclick="alert('NOTE: You may need to rotate your device for the best experience.')">
 				<img src="assets/di/browser.png"><br>
 				Browser
 			</a>
