--- a/browser.html
+++ b/browser.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Starting browser...</title>
     <link rel="icon" href="assets/new-logo/white-blueshadow.png">
     <style>
         body {
