--- a/browser.html
+++ b/browser.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starting browser...</title>
-    <link rel="icon" href="assets/new-logo/white-blueshadow.png">
+    <title>Browser</title>
+    <link rel="icon" href="assets/di/browser.png">
     <style>
         body {
             background: black;
@@ -42,8 +42,8 @@
 </head>
 <body>
     <div class="align">
-        <img src="assets/new-logo/white-blueshadow.png" height="350px">
-    </div>Hello!
+        <img src="assets/di/browser.png" height="350px">
+    </div>Starting Browser...
 
     <div class="logo">
         Made by&nbsp;
