--- a/os.html
+++ b/os.html
@@ -67,7 +67,7 @@
 				<button class="dropbtn">About</button>
 				<div class="dropdown-content">
 					<a href="https://wyliegdps02.7m.pl/discord" target="_blank">Help</a>
-					<a href="#" onclick="alert('Website version 0.5 BETA')">About WGDPS</a>
+					<a href="#" onclick="alert('Website Version 0.6 Beta')">About Page</a>
 					<hr style="margin: 0px 10px;">
 					<a href="#" class="openWindow" data-id="5">About MacOS Web</a>
 				</div>
