--- a/os.html
+++ b/os.html
@@ -112,7 +112,7 @@
 			<hr style="margin: 10px;">
 			<div class="welcum-q">
 				<strong>Feedback/Links</strong>&nbsp;<p></p>
-				<img src="assets/discord.svg" height="18px">TG20#6385
+				<img src="assets/discord.svg" height="18px">NoneHAHA
 <br>
 				Social Links - 
 				https://resite.link/tg20</div></div></div>
