--- a/os.html
+++ b/os.html
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body style="cursor: auto;" data-new-gr-c-s-check-loaded="14.1043.0" data-gr-ext-installed="" data-new-gr-c-s-loaded="14.1043.0">
-	<div id="desktop" style="background-image: url(&quot;../assets/macwin.png&quot;); background-size: 40%; background-color: rgb(0, 55, 99);">
+	<div id="desktop" style="background-image: url(&quot;../assets/bg.png&quot;); background-size: 40%; background-color: rgb(0, 55, 99);">
 		<div class="mac-topbar">
 			<img src="assets/new-logo/black-whiteshadow.png" height="20px">
 
