--- a/web/index.html
+++ b/web/index.html
@@ -11,12 +11,12 @@
 <meta property="og:title" content="Minecraft 1.5.2" />
 <meta property="og:locale" content="en-US" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://g.eags.us/eaglercraft/" />
+<meta property="og:url" content="https://tg20yt.github.io/web/Minecraft.html" />
 <meta property="og:image" content="https://media.discordapp.net/attachments/378764518081429506/932053915061587978/thumbnail2.png" />
 <meta property="og:description" content="This is real Minecraft 1.5.2 that you can play in any regular web browser. That includes school chromebooks, it works on all chromebooks. You can join real Minecraft 1.5.2 servers with it through a custom proxy based on Bungeecord." />
 <script type="text/javascript" src="classes.js"></script>
 <script type="text/javascript">
-alert("Make sure you replace the URL 'https://g.eags.us/eaglercraft/' in the meta tags of this HTML file with the URL to your own site!");
+alert("This is REAL Minecraft Java Edition version 1.5.2 running in the browser via JavaScript, Multiplayer is the only feature but only works with wss servers, connect to wss://mess.eu.org/s1/ to play");
 window.addEventListener("load", function(){ window.minecraftOpts = [
 "game_frame","assets.epk",
 "CgAACQAHc2VydmVycwoAAAABCAACaXAAIHdzKHMpOi8vIChhZGRyZXNzIGhlcmUpOihwb3J0KSAvCAAEbmFtZQAIdGVtcGxhdGUBAAtoaWRlQWRkcmVzcwEIAApmb3JjZWRNT1REABl0aGlzIGlzIG5vdCBhIHJlYWwgc2VydmVyAAA="
