--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>THIS SITE IS NO LONGER BEING UPDATED</title>
     <link rel="icon" href="assets/new-logo/white-blueshadow.png">
     <style>
         body {
@@ -43,7 +43,7 @@
 <body>
     <div class="align">
         <img src="assets/new-logo/white-blueshadow.png" height="350px">
-    </div>Hello!
+    </div>H=This site is no longer being updated due to time constraints. It will instead be used to host my games from itch.io as backups. Sorry :(
 
     <div class="logo">
         Made by&nbsp;
