--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THIS SITE IS NO LONGER BEING UPDATED</title>
-    <link rel="icon" href="assets/new-logo/white-blueshadow.png">
+    <link rel="icon" href="assets/new-logo/warning.png">
     <style>
         body {
             background: black;
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div class="align">
-        <img src="assets/new-logo/white-blueshadow.png" height="350px">
+        <img src="assets/new-logo/warning.png" height="350px">
     </div>H=This site is no longer being updated due to time constraints. It will instead be used to host my games from itch.io as backups. Sorry :(
 
     <div class="logo">
