--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: white;
             font-size: xx-large;
             font-weight: bold;
-            animation: appearing 5s ease-in-out;
+            animation: appearing 1.5s ease-in-out;
             text-align: center;
         }
         .align {
@@ -43,7 +43,7 @@
 <body>
     <div class="align">
         <img src="assets/new-logo/warning.png" height="350px">
-    </div>H=This site is no longer being updated due to time constraints. It will instead be used to host my games from itch.io as backups. Sorry :(
+    </div>This site is no longer being updated due to time constraints. It will instead be used to host my games from itch.io as backups. Sorry :(
 
     <div class="logo">
         Made by&nbsp;
