--- a/os.html
+++ b/os.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
 	<meta property="og:site_name" content="Wylie">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="TG20 Website Beta">
+	<meta property="og:title" content="TG20 Legacy Site">
 	<meta property="og:description" content="Welcome to the new styled website for WylieGDPS">
 	<meta id="meta-image" property="og:image" itemprop="image" content="https://media.discordapp.net/attachments/839834610799607818/871744697926823936/white-blueshadow.png">
 	<meta name="author" content="Wylie">
@@ -187,7 +187,7 @@
 			<a title="Open the GDPS tools page" class="openWindow" data-id="2">
 				<img src="assets/di/tools.png"><br>Changelog</a>
 			<a title="Backups of TG20 Games from itch.io" class="openWindow" data-id="1">
-				<img src="assets/di/browser.png"><br>
+				<img src="assets/di/games.png"><br>
 				TG20 Games
 			</a>
 			
