--- a/os.html
+++ b/os.html
@@ -10,7 +10,7 @@
   	<meta name="description" content="WGDPS website">
 
 	<link rel="icon" href="assets/new-logo/white-blueshadow.png">
-	<title>TG20 Website Beta</title>
+	<title>TG20 Legacy Site</title>
 
 	<meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
