--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>This site is no longer being updated due to time constraints. It will instead be used to host my games from itch.io as backups. Sorry :(
 
     <div class="logo">
-        Made by&nbsp;
+        Made by TG20 and&nbsp;
         <img src="assets/Wylie.png" height="15px">
     </div>
 </body>
