--- a/tg20games/games.html
+++ b/tg20games/games.html
@@ -17,5 +17,9 @@
    <p><a href="https://github.com/TG20YT/TG20YT.github.io/raw/main/tg20games/fnfweek7/FNFWeek7ChromeOS.zip">FNF Week 7 Fanmade Chrome OS app [Requires Download] </a></p>
 <br></br>
    <p><a href="https://tg20yt.github.io/tg20games/tutorials/Tutorial.html">FNF Week 7 Tutorial [READ THIS FIRST!!] </a></p>
+<br></br>
+   <p><a href="https://resite.link/tg20games">Better-looking version</a></p>
+<br></br>
+   <p><a href="https://resite.link/tg20">Updated TG20 website</a></p>
   </body>
 </html>
