--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         body {
             background: black;
-            font-family: 'Segoe UI';
+            font-family: 'Roboto';
             color: white;
             font-size: xx-large;
             font-weight: bold;
