--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            font-family: 'Roboto';
         }
         .logo {
             font-weight: normal !important;
@@ -43,7 +44,9 @@
 <body>
     <div class="align">
         <img src="assets/new-logo/warning.png" height="350px">
-    </div>This site is no longer being updated due to time constraints. It will instead be used to host my games from itch.io as backups. Sorry :(
+    </div>This site is no longer being updated due to time constraints. It will instead be used to host my games from itch.io as backups.
+    <br></br>
+    Sorry 😞
 
     <div class="logo">
         Made by TG20 and&nbsp;
