--- a/tg20games/getoverit/index.html
+++ b/tg20games/getoverit/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <!-- We only include this to explicitly loosen the CSP of various packager environments. It does not provide any security. -->
   <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: blob:">
-  <title>Getting Over It Multiplayer Edition TG20 server A</title>
+  <title>Getting Over It Multiplayer Edition</title>
   <style>
     body {
       color: #ffffff;
@@ -138,6 +138,7 @@
   
 </head>
 <body>
+  <a href="https://tg20yt.github.io/tg20games/games.html">Go Back</a>
   <noscript>Enable JavaScript</noscript>
 
   <div id="app"></div>
