--- a/tg20games/games.html
+++ b/tg20games/games.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Chango&family=Roboto:wght@300&display=swap" rel="stylesheet">
+      <style>
+        body{
+            background-image: url("https://images.unsplash.com/photo-1616235132417-99f443954d2e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80");
+            background-size: cover;
+            font-family: 'Roboto', 'sans-serif';
+        }
+        main{
+            display: flex;
+            height: 100vh;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        .title{
+            font-family: 'Chango', cursive;
+            font-size: 48px;
+        }
+        .content{
+            text-align: center;
+        }
+    </style>
       <title>TG20 Games itch.io backup</title>
    </head>
    <body>
-      <h1>TG20 Games Backup Site</h1>
-      <br></br>
-      <h2>This is where you can play backups of games from the TG20 Games itch.io account in the event of an account ban.</h2>
-       <br></br>
+      <main>
+      <img src="assets/di/games.png" height="350px">
+        <h4 class="title">TG20 Games itch.io backup</h4>
+        <div class="content">
+          This is where you can play backups of games from the TG20 Games itch.io account in the event of an account ban.
+        </div>
 <h2>Here is a list of games to choose from</h2>
 <br></br>
    <p><a href="https://tg20yt.github.io/tg20games/minecraft-by-eagle/index.html">Minecraft: Browser Edition (Compiled from LAX1DUDE's EagleCraft)  [Runs in Browser] </a></p>
