--- a/youtube-shtuff/index.html
+++ b/youtube-shtuff/index.html
@@ -42,7 +42,7 @@
 <body>
     <main>
         
-        <img src="FUN_CHAT.jpg" height="350px">
+        <img src="./pfp.jpg" height="350px">
        
         <h4 class="header404">TG20's chat cuz I don't have Discord</h4>
 
