--- a/tg20games/games.html
+++ b/tg20games/games.html
@@ -35,7 +35,7 @@
         </div>
 <h2>Here is a list of games to choose from</h2>
 <br></br>
-   <p><a href="https://tg20yt.github.io/tg20games/minecraft-by-eagle/index.html">Minecraft: Browser Edition (Compiled from LAX1DUDE's EagleCraft)  [Runs in Browser] </a></p>
+   <p><a href="https://tg20yt.github.io/tg20games/minecraft-by-eagle/Offline_Download_Version.html">Minecraft: Browser Edition (Compiled from LAX1DUDE's EagleCraft)  [Runs in Browser, Updated] </a></p>
 <br></br>
    <p><a href="https://tg20yt.github.io/tg20games/getoverit/index.html">Getting Over It: Multiplayer [Runs in Browser] </a></p>
 <br></br>
