Tried to add the time and date.
Don't mind the name change in the site, I'm trying to import it into Glitch as a new site and this is the name I'm gonna use for it. It's only temporary.

--- a/os.html
+++ b/os.html
@@ -2,8 +2,8 @@
 <html lang="en"><head>
 	<meta property="og:site_name" content="Wylie">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="TG20 Legacy Site">
-	<meta property="og:description" content="Welcome to the new styled website for WylieGDPS">
+	<meta property="og:title" content="The Dark Side (ALPHA)">
+	<meta property="og:description" content="HOLY CRAP IT'S ANOTHER WEBSITE!">
 	<meta id="meta-image" property="og:image" itemprop="image" content="https://media.discordapp.net/attachments/839834610799607818/871744697926823936/white-blueshadow.png">
 	<meta name="author" content="Wylie">
   	<meta name="keywords" content="wylie,wgdps,wyliegdps,xgdps,xcreatorgoal,sexcreatorgoal,thewyliemaster,wyliemaster">
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body style="cursor: auto;" data-new-gr-c-s-check-loaded="14.1056.0" data-gr-ext-installed="" data-new-gr-c-s-loaded="14.1043.0">
-	<div id="desktop" style="background-image: url(&quot;../assets/bg.png&quot;); background-size: 100%; background-color: rgb(0, 55, 99);">
+	<div id="desktop" style="background-image: url(&quot;https://lh5.googleusercontent.com/sivB2GJmcPalsk2Hszmh4tB0XSIj89BXTwjEhbT4IXvIk0T3kEzMk8nmspjSpFrDMco=w2400&quot;); background-size: 100%; background-color: rgb(0, 55, 99);">
 		<div class="mac-topbar">
 			<img src="assets/new-logo/black-whiteshadow.png" height="20px">
 
@@ -60,15 +60,20 @@
 			<div class="dropdown">
 				<button class="dropbtn">About</button>
 				<div class="dropdown-content">
-					<a href="https://wyliegdps02.7m.pl/discord" target="_blank">Help</a>
-					<a href="#" onclick="alert('Website Version 0.6.2 Beta')">About Page</a>
+					<a href="./bye.html">Help</a>
+					<a href="#" onclick="alert('Website Version 0.1.1 Alpha')">About Page</a>
 					<hr style="margin: 0px 10px;">
-					<a href="#" class="openWindow" data-id="5">About MacOS Web</a>
+					<a href="#" class="openWindow" data-id="5">About The Dark Side</a>
 				</div>
 			</div>
 
 			<div class="macos-right">
-				<button class="dropbtn">Mon 11 January</button>
+				<button class="dropbtn"><p><span id="datetime"></span></p>
+
+<script>
+var dt = new Date();
+document.getElementById("datetime").innerHTML = (("0"+(dt.getMonth()+1)).slice(-2)) +"/"+ (("0"+dt.getDate()).slice(-2)) +"/"+ (dt.getFullYear()) +" "+ (("0"+dt.getHours()+1).slice(-2)) +":"+ (("0"+dt.getMinutes()+1).slice(-2));
+</script></button>
 			</div>
 		</div>
 
@@ -94,18 +99,18 @@
 		<div class="window ui-draggable ui-draggable-handle activeWindow closed" data-title="Welcome" data-id="3" id="window3" style="z-index: 1000; position: relative; left: 67px; top: 112px;"><div class="windowHeader"><span title="Close" class="winclose"></span><span title="Maximize" class="winmaximize"></span><span title="Minimize" class="winminimize"></span><strong class="window-title">Welcome</strong></div><div class="wincontent ui-resizable">
 			<center>
 				<img src="assets/new-logo/white-blueshadow.png" height="200px">
-				<h1>Welcome to the Legacy Site</h1>
+				<h1>Welcome to The Dark Side</h1>
 			</center>
 			<p>
-				         Welcome to the Legacy Site.                 
-                      This website will no longer be updated                                       
-			and will instead be used for backups of my games on itch.io	  
-				I recommend you check out the Original site as
-			    it is still being updated to this day. Sorry</p>
+				         Welcome to The Dark Side.                 
+                      This is the place to go for all of your unblocking needs!                                       
+		    Please note that this website is in beta and can have issues.	  
+		    If you got here by mistake, here is the Google Sites Version
+			    </p>
 			<hr style="margin: 10px;">
 			<div class="welcum-q">
 				<strong>Links - </strong>
-				Original Site: https://resite.link/tg20</div><div class="ui-resizable-handle ui-resizable-e" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-s" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-e" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-s" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-e" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-s" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90;"></div></div></div>
+				Google Site: https://sites.google.com/ecsd.me/ubh-testing/Welcome</div><div class="ui-resizable-handle ui-resizable-e" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-s" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-e" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-s" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-e" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-s" style="z-index: 90;"></div><div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se" style="z-index: 90;"></div></div></div>
 
 		<div class="window ui-draggable ui-draggable-handle closed" data-title="Wylie's stuff" data-id="4" id="window4" style="z-index: 976; position: relative; left: 420px; top: 49px;"><div class="windowHeader"><span title="Close" class="winclose"></span><span title="Maximize" class="winmaximize"></span><span title="Minimize" class="winminimize"></span><strong class="window-title">Wylie's stuff</strong></div><div class="wincontent ui-resizable"><div class="windowHeader"><span title="Close" class="winclose"></span><span title="Maximize" class="winmaximize"></span><span title="Minimize" class="winminimize"></span><strong class="window-title">Wylie's stuff</strong></div><div class="wincontent ui-resizable"><div class="windowHeader"><span title="Close" class="winclose"></span><span title="Maximize" class="winmaximize"></span><span title="Minimize" class="winminimize"></span><strong class="window-title">Wylie's stuff</strong></div><div class="wincontent ui-resizable"><div class="windowHeader"><span title="Close" class="winclose"></span><span title="Maximize" class="winmaximize"></span><span title="Minimize" class="winminimize"></span><strong class="window-title">Wylie's stuff</strong></div><div class="wincontent ui-resizable"><div class="wylie-left">
 				<img src="assets/da_wylie_new.png" height="250px">
@@ -170,7 +175,7 @@
 
 		<div class="window ui-draggable ui-draggable-handle closed" data-title="" data-id="5" id="window5" style="z-index: 998; position: relative; left: 236px; top: 101px;"><div class="windowHeader"><span title="Close" class="winclose"></span><span title="Maximize" class="winmaximize"></span><span title="Minimize" class="winminimize"></span><strong class="window-title"></strong></div><div class="wincontent ui-resizable">
 			<center>
-				<img src="assets/mac.png" height="200px"><p>
+				<img src="https://lh4.googleusercontent.com/7F4blN1zCLXt6aCuEZm7JN7owqSVjGZERPpCyjdZ0GZYaIDjLJUxX5OpqkeY5IuuUK8" height="200px"><p>
 				</p><h1>MacOS X TG20</h1>
 				<p>Version 69.0</p>
 				
@@ -198,12 +203,16 @@
 			
 		</div>
 
-		<span id="templateLink"><img height="25px" src="assets/Wylie.png">
-	</span></div>
+		
 	<div class="ios">
 		<div class="statusbar">
 			<img src="assets/iOS/mobile-singal.png">
-			<span>10:14</span>
+			<p><span id="time"></span></p>
+
+<script>
+var dt = new Date();
+document.getElementById("time").innerHTML = dt.toLocaleTimeString();
+</script>
 			<img src="assets/iOS/battery.png">
 		</div>
 		<div class="appmenu">
