--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
     Sorry 😞
 
     <div class="logo">
-        Made by TG20 and&nbsp;
+        Made by Rainn and&nbsp;
         <img src="assets/Wylie.png" height="15px">
     </div>
+    yall who here in 2024?
 </body>
 </html>
