--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </main>
         <footer>
             &copy; 2024 Rainn's Skeuomorphic World
-            <p><a href="start.html" class="old-homepage-button">Go back to the old homepage</a></p>
+            <p><a href="startup.html" class="old-homepage-button">Go back to the old homepage</a></p>
         </footer>
     </div>
 
