--- a/web/index.html
+++ b/web/index.html
@@ -1,28 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Minecraft: Java Edition 1.5.2</title>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="This is real Minecraft 1.5.2 that you can play in any regular web browser. That includes school chromebooks, it works on all chromebooks. You can join real Minecraft 1.5.2 servers with it through a custom proxy based on Bungeecord." />
-<meta name="keywords" content="calder, young, lax1dude, games, eaglercraft, eagler, minecraft" />
-<meta name='url' content="https://tg20yt.github.io/web/Minecraft.html" />
-<meta name="author" content="TG20" />
-<meta property="og:title" content="Minecraft 1.5.2" />
-<meta property="og:locale" content="en-US" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://tg20yt.github.io/web/Minecraft.html" />
-<meta property="og:image" content="https://media.discordapp.net/attachments/378764518081429506/932053915061587978/thumbnail2.png" />
-<meta property="og:description" content="This is real Minecraft 1.5.2 that you can play in any regular web browser. That includes school chromebooks, it works on all chromebooks. You can join real Minecraft 1.5.2 servers with it through a custom proxy based on Bungeecord." />
-<script type="text/javascript" src="classes.js"></script>
-<script type="text/javascript">
-alert("This is REAL Minecraft Java Edition version 1.5.2 running in the browser via JavaScript, Multiplayer is the only feature but only works with wss servers, connect to wss://mess.eu.org/s1/ to play");
-window.addEventListener("load", function(){ window.minecraftOpts = [
-"game_frame","assets.epk",
-"CgAACQAHc2VydmVycwoAAAABCAACaXAAIHdzKHMpOi8vIChhZGRyZXNzIGhlcmUpOihwb3J0KSAvCAAEbmFtZQAIdGVtcGxhdGUBAAtoaWRlQWRkcmVzcwEIAApmb3JjZWRNT1REABl0aGlzIGlzIG5vdCBhIHJlYWwgc2VydmVyAAA="
-]; main(); });
-</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat it's updated we finally got singleplayer and shaders!</title>
 </head>
-<body style="margin:0px;width:100vw;height:100vh;" id="game_frame">
+<body>
+    <script>
+        alert("This is REAL Minecraft: Java Edition 1.8.8 running in the browser. Close this alert to play the game!");
+        window.location.href = "minecraft.html";
+    </script>
 </body>
 </html>
