--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         .floating {
             animation: float 3s ease-in-out infinite;
         }
-        .pronoun-button, .old-homepage-button {
+        .pronoun-button {
             display: inline-block;
             padding: 5px 10px;
             background: linear-gradient(to bottom, #4cd964, #32b34a);
@@ -85,7 +85,6 @@
             cursor: pointer;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
             text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-            text-decoration: none;
         }
         .old-homepage-button {
             background: linear-gradient(to bottom, #ff9500, #ff5e3a);
@@ -140,13 +139,13 @@
             <p><strong>Interests:</strong> Geometry Dash, Friday Night Funkin'</p>
             <div class="social-links">
                 <a href="https://youtube.com/@ItsRainningOutside" target="_blank" class="social-link floating">
-                    <img src="Yt1.jpg" alt="YouTube" width="50" height="50">
+                    <img src="yt1.jpg" alt="YouTube" width="50" height="50">
                 </a>
                 <a href="https://x.com/Ra1nnYT_" target="_blank" class="social-link floating">
-                    <img src="twitter.png" alt="Twitter" width="50" height="50">
+                    <img src="twitter.jpg" alt="Twitter" width="50" height="50">
                 </a>
                 <a href="https://github.com/TG20HD/" target="_blank" class="social-link floating">
-                    <img src="github.png" alt="GitHub" width="50" height="50">
+                    <img src="git.png" alt="GitHub" width="50" height="50">
                 </a>
             </div>
         </main>
@@ -199,4 +198,10 @@
         }
 
         window.onclick = function(event) {
-            if (event.target == modal
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
+</body>
+</html>
