--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
             <p><strong>Interests:</strong> Geometry Dash, Friday Night Funkin'</p>
             <div class="social-links">
                 <a href="https://youtube.com/@ItsRainningOutside" target="_blank" class="social-link floating">
-                    <img src="yt1.jpg" alt="YouTube" width="50" height="50">
+                    <img src="Yt1.jpg" alt="YouTube" width="50" height="50">
                 </a>
                 <a href="https://x.com/Ra1nnYT_" target="_blank" class="social-link floating">
-                    <img src="twitter.jpg" alt="Twitter" width="50" height="50">
+                    <img src="twitter.png" alt="Twitter" width="50" height="50">
                 </a>
                 <a href="https://github.com/TG20HD/" target="_blank" class="social-link floating">
-                    <img src="git.png" alt="GitHub" width="50" height="50">
+                    <img src="github.png" alt="GitHub" width="50" height="50">
                 </a>
             </div>
         </main>
