--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rainn's World</title>
+    <title>Rina's World</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -129,12 +129,12 @@
 <body>
     <div class="container">
         <header>
-            <h1>Rainn's World</h1>
+            <h1>Rina's World</h1>
         </header>
         <main>
             <img src="rainn.jpg" alt="Rainn" class="profile-pic" id="profilePic">
-            <h2>Hey, I'm Rainn!</h2>
-            <p><span class="pronoun-button" id="pronounButton">Pronouns: She/They</span></p>
+            <h2>Hey, I'm Rina!</h2>
+            <p><span class="pronoun-button" id="pronounButton">Pronouns: Any</span></p>
             <p>I'm a 16-year-old genderfluid person who loves gaming and creating cool stuff.</p>
             <p><strong>Interests:</strong> Geometry Dash, Friday Night Funkin'</p>
             <div class="social-links">
@@ -158,17 +158,16 @@
     <div id="pronounModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h2>She/They Pronouns</h2>
-            <p>The pronoun set "She/They" indicates that a person is comfortable with both "she/her" and "they/them" pronouns. This means you can use either set when referring to them. For example:</p>
+            <h2>Any Pronouns</h2>
+            <p>When someone says they use "any pronouns," it means they are comfortable with any set of pronouns being used to refer to them. This can include, but is not limited to, "he/him," "she/her," "they/them," and other pronoun sets. For example:</p>
             <ul>
-                <li>"She went to the store" or "They went to the store"</li>
-                <li>"I saw her yesterday" or "I saw them yesterday"</li>
-                <li>"That's her book" or "That's their book"</li>
+                <li>"He went to the store" or "She went to the store" or "They went to the store"</li>
+                <li>"I saw him yesterday" or "I saw her yesterday" or "I saw them yesterday"</li>
+                <li>"That's his book" or "That's her book" or "That's their book"</li>
             </ul>
-            <p>It's respectful to alternate between these pronouns or ask the individual if they have a preference for one over the other in certain contexts.</p>
+            <p>It's respectful to use a variety of pronouns when referring to someone who uses any pronouns. You may also ask if they have any preferences in certain contexts.</p>
         </div>
     </div>
-
     <script>
         document.getElementById('profilePic').addEventListener('click', function() {
             document.body.style.transition = 'transform 1s';
