--- a/index.html
+++ b/index.html
@@ -135,23 +135,32 @@
             <img src="rainn.jpg" alt="Rainn" class="profile-pic" id="profilePic">
             <h2>Hey, I'm Rina!</h2>
             <p><span class="pronoun-button" id="pronounButton">Pronouns: Any</span></p>
-            <p>I'm a 16-year-old genderfluid person who loves gaming and creating cool stuff.</p>
+            <p>I'm a 16-year-old genderfluid/nonbinary person who loves gaming and creating cool stuff.</p>
             <p><strong>Interests:</strong> Geometry Dash, Friday Night Funkin'</p>
             <div class="social-links">
-                <a href="https://youtube.com/@ItsRainningOutside" target="_blank" class="social-link floating">
+                <a href="https://youtube.com/@ItsR1na" target="_blank" class="social-link floating">
                     <img src="Yt1.jpg" alt="YouTube" width="50" height="50">
                 </a>
                 <a href="https://x.com/Ra1nnYT_" target="_blank" class="social-link floating">
                     <img src="twitter.png" alt="Twitter" width="50" height="50">
                 </a>
-                <a href="https://github.com/TG20HD/" target="_blank" class="social-link floating">
+                <a href="https://github.com/ra1nnyt/" target="_blank" class="social-link floating">
                     <img src="github.png" alt="GitHub" width="50" height="50">
                 </a>
+                <a href="https://bsky.app/profile/itsr1na.bsky.social" target="_blank" class="social-link floating">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Bluesky_Logo.svg/1200px-Bluesky_Logo.svg.png" alt="Bluesky" width="50" height="50">
+                </a>
             </div>
+<!-- New Projects Section -->
+<section>
+    <h2>My Projects</h2>
+    <p><a href="https://ra1nnyt.github.io/Video-To-Ascii" target="_blank" class="pronoun-button">ASCII Video Player</a></p>
+</section>
+
         </main>
         <footer>
-            &copy; 2024 Rainn's Skeuomorphic World
-            <p><a href="startup.html" class="old-homepage-button">Go back to the old homepage</a></p>
+            &copy; 2024 Rina's Gay World
+            <p><a href="startup.html" class="old-homepage-button">Go back to the old homepage (VERY FUCKED UP)</a></p>
         </footer>
     </div>
 
